--- a/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/explore_databases/explore_chinook.ipynb
+++ b/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/explore_databases/explore_chinook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Connect to SQLite database\n",
-    "db_path = here('data/travel.sqlite')\n",
+    "db_path = here('data/Chinook.db')\n",
     "conn = sqlite3.connect(db_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,65 +54,120 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>aircrafts_data</td>\n",
+       "      <td>Album</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>airports_data</td>\n",
+       "      <td>Artist</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>boarding_passes</td>\n",
+       "      <td>Customer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>bookings</td>\n",
+       "      <td>Employee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>flights</td>\n",
+       "      <td>Genre</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>seats</td>\n",
+       "      <td>Invoice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>ticket_flights</td>\n",
+       "      <td>InvoiceLine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>tickets</td>\n",
+       "      <td>MediaType</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>car_rentals</td>\n",
+       "      <td>Playlist</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>hotels</td>\n",
+       "      <td>PlaylistTrack</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>trip_recommendations</td>\n",
+       "      <td>Track</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    name\n",
-       "0         aircrafts_data\n",
-       "1          airports_data\n",
-       "2        boarding_passes\n",
-       "3               bookings\n",
-       "4                flights\n",
-       "5                  seats\n",
-       "6         ticket_flights\n",
-       "7                tickets\n",
-       "8            car_rentals\n",
-       "9                 hotels\n",
-       "10  trip_recommendations"
+       "             name\n",
+       "0           Album\n",
+       "1          Artist\n",
+       "2        Customer\n",
+       "3        Employee\n",
+       "4           Genre\n",
+       "5         Invoice\n",
+       "6     InvoiceLine\n",
+       "7       MediaType\n",
+       "8        Playlist\n",
+       "9   PlaylistTrack\n",
+       "10          Track"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get list of all tables\n",
+    "query = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
+    "tables = pd.read_sql(query, conn)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jagged Little Pill</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Title\n",
+       "0  Jagged Little Pill"
       ]
      },
      "execution_count": 5,
@@ -121,8 +176,10 @@
     }
    ],
    "source": [
-    "# Get list of all tables\n",
-    "query = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
+    "query = \"\"\"SELECT Album.Title\n",
+    "FROM Album\n",
+    "JOIN Artist ON Album.ArtistId = Artist.ArtistId\n",
+    "WHERE Artist.Name = 'Alanis Morissette';\"\"\"\n",
     "tables = pd.read_sql(query, conn)\n",
     "tables"
    ]
