--- a/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/python_tip_automatic_docstring/automatic_docstring.ipynb
+++ b/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/python_tip_automatic_docstring/automatic_docstring.ipynb
@@ -38,7 +38,7 @@
     "        \"\"\"Updates the description (docstring) of the query_sqldb function.\"\"\"\n",
     "        self.query_sqldb.__doc__ = new_description\n",
     "\n",
-    "# Usage example\n",
+    "# Usage examples\n",
     "your_object = YourClass()\n",
     "print(\"Old docstring:\")\n",
     "print(your_object.query_sqldb.__doc__)\n",
