--- a/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/test_gpt_models/gpt-4o.ipynb
+++ b/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/test_gpt_models/gpt-4o.ipynb
@@ -36,17 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the model name\n",
-    "model = \"gpt-4o-mini\""
+    "model = \"gpt-4o\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! I'm just a program, so I don't have feelings, but I'm here and ready to help you. How can I assist you today?\n"
+      "Hello! I'm here and ready to help you. How can I assist you today?\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
    ],
    "source": [
     "image_path = \"image.png\"\n",
-    "image_prompt = \"Describe this image.\"\n",
+    "image_prompt = \"You are an AI expert. Answer this question.\"\n",
     "print(image_inference(image_path, image_prompt))"
    ]
   }
