--- a/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/Tools/RAG_tool_step_by_step/rag_tool.ipynb
+++ b/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/Tools/RAG_tool_step_by_step/rag_tool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,6 @@
     "\n",
     "EMBEDDING_MODEL = \"text-embedding-3-small\"\n",
     "VECTORDB_DIR = \"data/airline_policy_vectordb\"\n",
-    "DOC_DIR = \"data/unstructured_docs\"\n",
     "K=2"
    ]
   },
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -89,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = \"What is the cancelation rule for a flight ticket?\""
+    "message = \"What is the cancelation rule for a flight ticket at swiss airline policy?\""
    ]
   },
   {
@@ -105,27 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs = vectordb.similarity_search(message, k=3)"
+    "docs = vectordb.similarity_search(message, k=K)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'page': 9, 'source': 'd:\\\\Github\\\\Advanced-QA-and-RAG-Series\\\\RAG-with-unstructured-data-and-SQLAgent\\\\data\\\\unstructured_docs\\\\swiss_faq.pdf'}, page_content=\"for a refund or may only be able to receive a partial refund. If you booked your flight through a third-party website or\\ntravel agent, you may need to contact them directly to cancel your flight. Always check the terms and conditions of your\\nticket to make sure you understand the cancellation policy and any associated fees or penalties. If you're cancelling your\\nflight due to unforeseen circumstances such as a medical emergency or a natural disaster , Swiss Air may of fer you\\nspecial exemptions or accommodations. What is Swiss Airlines 24 Hour Cancellation Policy? Swiss Airlines has a 24\"),\n",
-       " Document(metadata={'page': 10, 'source': 'd:\\\\Github\\\\Advanced-QA-and-RAG-Series\\\\RAG-with-unstructured-data-and-SQLAgent\\\\data\\\\unstructured_docs\\\\swiss_faq.pdf'}, page_content=\"cancel your Swiss Airlines flight within 24 hours, you can do so easily online. Just remember to check the terms and\\nconditions of your ticket to make sure you're eligible for a refund.\\nSwiss Air Cancellation Fees The cancellation fees for Swiss Air flights may vary depending on the type of ticket you have\\npurchased. The airline of fers three dif ferent types of tickets, which are:\\nFlex T icket - This ticket of fers the most flexibility and allows passengers to make changes or cancel their flight without\\nincurring any additional fees. Standard T icket - This ticket of fers some flexibility but charges a fee for changes and\\ncancellations. The fee for cancelling a standard ticket can range from 100 to 250 CHF , depending on the route and time\\nof cancellation. Economy T icket - This ticket of fers the least flexibility and charges a fee for any changes or cancellations.\\nThe fee for cancelling an economy ticket can range from 150 to 350 CHF , depending on the route and time of\\ncancellation. It is important to note that the fees listed above are subject to change and may vary depending on the\\nspecific ticket you have purchased. Additionally , if you have purchased any add-ons or upgrades, such as extra baggage\\nor seat selection, the fees associated with cancelling those may also apply .\\nSwiss Air Refund Policy If you cancel your Swiss Air flight, you may be eligible for a refund depending on the type of\\nticket you have purchased and the time of cancellation. Here are the details:\\nFlex T icket - If you have purchased a Flex T icket, you can cancel your flight without incurring any fees and receive a full\\nrefund. Standard T icket - If you have purchased a Standard T icket and cancel your flight within 24 hours of booking, you\\ncan receive a full refund. If you cancel your flight after 24 hours, you may be charged a cancellation fee and receive a\\npartial refund. Economy T icket - If you have purchased an Economy T icket and cancel your flight within 24 hours of\\nbooking, you can receive a full refund. If you cancel your flight after 24 hours, you may be charged a cancellation fee and\"),\n",
+       "[Document(metadata={'page': 10, 'source': 'd:\\\\Github\\\\Advanced-QA-and-RAG-Series\\\\RAG-with-unstructured-data-and-SQLAgent\\\\data\\\\unstructured_docs\\\\swiss_faq.pdf'}, page_content=\"cancel your Swiss Airlines flight within 24 hours, you can do so easily online. Just remember to check the terms and\\nconditions of your ticket to make sure you're eligible for a refund.\\nSwiss Air Cancellation Fees The cancellation fees for Swiss Air flights may vary depending on the type of ticket you have\\npurchased. The airline of fers three dif ferent types of tickets, which are:\\nFlex T icket - This ticket of fers the most flexibility and allows passengers to make changes or cancel their flight without\\nincurring any additional fees. Standard T icket - This ticket of fers some flexibility but charges a fee for changes and\\ncancellations. The fee for cancelling a standard ticket can range from 100 to 250 CHF , depending on the route and time\\nof cancellation. Economy T icket - This ticket of fers the least flexibility and charges a fee for any changes or cancellations.\\nThe fee for cancelling an economy ticket can range from 150 to 350 CHF , depending on the route and time of\\ncancellation. It is important to note that the fees listed above are subject to change and may vary depending on the\\nspecific ticket you have purchased. Additionally , if you have purchased any add-ons or upgrades, such as extra baggage\\nor seat selection, the fees associated with cancelling those may also apply .\\nSwiss Air Refund Policy If you cancel your Swiss Air flight, you may be eligible for a refund depending on the type of\\nticket you have purchased and the time of cancellation. Here are the details:\\nFlex T icket - If you have purchased a Flex T icket, you can cancel your flight without incurring any fees and receive a full\\nrefund. Standard T icket - If you have purchased a Standard T icket and cancel your flight within 24 hours of booking, you\\ncan receive a full refund. If you cancel your flight after 24 hours, you may be charged a cancellation fee and receive a\\npartial refund. Economy T icket - If you have purchased an Economy T icket and cancel your flight within 24 hours of\\nbooking, you can receive a full refund. If you cancel your flight after 24 hours, you may be charged a cancellation fee and\"),\n",
        " Document(metadata={'page': 8, 'source': 'd:\\\\Github\\\\Advanced-QA-and-RAG-Series\\\\RAG-with-unstructured-data-and-SQLAgent\\\\data\\\\unstructured_docs\\\\swiss_faq.pdf'}, page_content=\"How to Cancel a Swiss Air Flight: 877-\\n5O7-7341 Step-by-Step Guide\\nSwiss Air is a premium airline based in Switzerland that of fers a range of domestic and international flights to\\npassengers. However , sometimes situations arise where passengers may need to cancel their flights. In such cases, it is\\nimportant to understand the Swiss Air Cancellation Policy to avoid any confusion or additional charges.\\nSwiss International Airlines Cancellation Policy In this article, we will provide you with everything you need to know about\\nthe Swiss Air Cancellation Policy , including how to cancel a Swiss Air flight, the fees associated with cancelling a flight,\\nand the refund policy .\\nIf you have booked a flight with Swiss Airlines but need to cancel it, it's important to understand their cancellation policy\\nto avoid any unnecessary fees or charges. Swiss Airlines of fers dif ferent fare types, each with their own specific\\ncancellation terms and conditions. The most flexible fare types such as Flex and Business Flex allow you to cancel your\\nflight up to 24 hours before departure without any penalty . For other fare types, cancellation fees may apply . If you cancel\\nyour Swiss Airlines flight outside of the 24-hour window , cancellation fees will be charged depending on your fare type\\nand the time of cancellation. For example, if you cancel a non-flexible economy class ticket, a cancellation fee will be\\ncharged. The closer you cancel to the departure date, the higher the cancellation fee. In some cases, Swiss Airlines may\\nallow you to make changes to your flight instead of cancelling it outright. However , these changes may also come with\\nfees or penalties depending on your fare type and the type of change requested. If Swiss Airlines cancels your flight, you\\nmay be entitled to a full refund or rebooking on another flight. However , if the cancellation is due to extraordinary\\ncircumstances such as bad weather or political unrest, Swiss Airlines may not be obligated to of fer any compensation. In\\nsummary , Swiss Airlines' cancellation policy varies depending on your fare type and the time of cancellation. T o avoid any\\nunnecessary fees or charges, it's important to familiarise yourself with the terms and conditions of your ticket and to\\ncontact Swiss Airlines as soon as possible if you need to make changes or cancel your flight.\")]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -171,17 +169,6 @@
      "output_type": "stream",
      "text": [
       "('# Content:\\n'\n",
-      " 'for a refund or may only be able to receive a partial refund. If you booked '\n",
-      " 'your flight through a third-party website or\\n'\n",
-      " 'travel agent, you may need to contact them directly to cancel your flight. '\n",
-      " 'Always check the terms and conditions of your\\n'\n",
-      " 'ticket to make sure you understand the cancellation policy and any '\n",
-      " \"associated fees or penalties. If you're cancelling your\\n\"\n",
-      " 'flight due to unforeseen circumstances such as a medical emergency or a '\n",
-      " 'natural disaster , Swiss Air may of fer you\\n'\n",
-      " 'special exemptions or accommodations. What is Swiss Airlines 24 Hour '\n",
-      " 'Cancellation Policy? Swiss Airlines has a 24\\n'\n",
-      " '\\n'\n",
       " 'cancel your Swiss Airlines flight within 24 hours, you can do so easily '\n",
       " 'online. Just remember to check the terms and\\n'\n",
       " \"conditions of your ticket to make sure you're eligible for a refund.\\n\"\n",
@@ -265,7 +252,7 @@
       " '\\n'\n",
       " '\\n'\n",
       " '# User new question:\\n'\n",
-      " 'What is the cancelation rule for a flight ticket?')\n"
+      " 'What is the cancelation rule for a flight ticket at swiss airline policy?')\n"
      ]
     }
    ],
@@ -282,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,28 +292,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('The cancellation rule for a flight ticket with Swiss Airlines depends on the '\n",
-      " 'type of ticket purchased:\\n'\n",
+      "('Swiss Airlines allows passengers to cancel their flights based on the type '\n",
+      " 'of ticket purchased. Here are the cancellation rules:\\n'\n",
       " '\\n'\n",
-      " '1. **Flex Ticket**: Allows cancellation without incurring any fees, and a '\n",
-      " 'full refund is available.\\n'\n",
-      " '2. **Standard Ticket**: A full refund is available if the flight is '\n",
-      " 'cancelled within 24 hours of booking. If cancelled after 24 hours, a '\n",
-      " 'cancellation fee ranging from 100 to 250 CHF may apply, resulting in a '\n",
-      " 'partial refund.\\n'\n",
-      " '3. **Economy Ticket**: A full refund is available if cancelled within 24 '\n",
-      " 'hours of booking. If cancelled after 24 hours, a cancellation fee ranging '\n",
-      " 'from 150 to 350 CHF may apply, leading to a partial refund.\\n'\n",
+      " '1. **Flex Ticket**: You can cancel your flight without incurring any fees '\n",
+      " 'and receive a full refund.\\n'\n",
       " '\\n'\n",
-      " \"It's important to always check the terms and conditions of your specific \"\n",
-      " 'ticket for eligibility and details on any associated fees or penalties.')\n"
+      " '2. **Standard Ticket**: \\n'\n",
+      " '   - If you cancel within 24 hours of booking, you can receive a full '\n",
+      " 'refund.\\n'\n",
+      " '   - If you cancel after 24 hours, you may be charged a cancellation fee '\n",
+      " '(ranging from 100 to 250 CHF) and receive a partial refund.\\n'\n",
+      " '\\n'\n",
+      " '3. **Economy Ticket**: \\n'\n",
+      " '   - If you cancel within 24 hours of booking, you can receive a full '\n",
+      " 'refund.\\n'\n",
+      " '   - If you cancel after 24 hours, you may be charged a cancellation fee '\n",
+      " '(ranging from 150 to 350 CHF) and receive a partial refund.\\n'\n",
+      " '\\n'\n",
+      " \"It's important to check the terms and conditions of your specific ticket, as \"\n",
+      " 'fees and refund eligibility may vary. Additionally, if you cancel your '\n",
+      " 'flight outside of the 24-hour window, cancellation fees apply.')\n"
      ]
     }
    ],
@@ -343,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.tools import tool\n",
     "\n",
     "@tool\n",
-    "def lookup_policy(query: str)->str:\n",
+    "def lookup_swiss_airline_policy(query: str)->str:\n",
     "    \"\"\"Search within the Swiss Airline's company policies to check whether certain options are permitted. Input should be a search query.\"\"\"\n",
     "    vectordb = Chroma(\n",
     "    collection_name=\"rag-chroma\",\n",
@@ -363,28 +356,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lookup_policy\n",
+      "lookup_swiss_airline_policy\n",
       "{'query': {'title': 'Query', 'type': 'string'}}\n",
       "Search within the Swiss Airline's company policies to check whether certain options are permitted. Input should be a search query.\n"
      ]
     }
    ],
    "source": [
-    "print(lookup_policy.name)\n",
-    "print(lookup_policy.args)\n",
-    "print(lookup_policy.description)"
+    "print(lookup_swiss_airline_policy.name)\n",
+    "print(lookup_swiss_airline_policy.args)\n",
+    "print(lookup_swiss_airline_policy.description)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -443,8 +436,7 @@
     }
    ],
    "source": [
-    "from pprint import pprint\n",
-    "pprint(lookup_policy.invoke(\"can I cancel my ticket?\"))"
+    "pprint(lookup_swiss_airline_policy.invoke(\"can I cancel my ticket?\"))"
    ]
   }
  ],
