--- a/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/custom_agent/openai_function_calling.ipynb
+++ b/AgentGraph-Intelligent-Q&A-and-RAG-System/Notebooks/custom_agent/openai_function_calling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,16 +14,23 @@
     }
    ],
    "source": [
-    "from dotenv import load_dotenv\n",
     "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI\n",
     "from pydantic import create_model\n",
     "import inspect, json\n",
     "from inspect import Parameter\n",
-    "from openai import OpenAI\n",
     "\n",
     "print(load_dotenv())\n",
     "\n",
     "os.environ['OPENAI_API_KEY'] = os.getenv(\"OPEN_AI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Custom agent**"
    ]
   },
   {
@@ -35,7 +42,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def abc(num1:int, num2:int)->int:\n",
+    "    \"Compute abc between two numbers\"\n",
+    "    return 2*(num1) - 2*(num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +90,12 @@
     "    kw = {n: (o.annotation, ... if o.default == Parameter.empty else o.default)\n",
     "            for n, o in inspect.signature(f).parameters.items()}\n",
     "    s = create_model(f'Input for `{f.__name__}`', **kw).schema()\n",
-    "    return dict(name=f.__name__, description=f.__doc__, parameters=s)\n",
-    "\n",
-    "def abc(num1:int, num2:int)->int:\n",
-    "    \"Compute abc between two numbers\"\n",
-    "    return num1 + num1 - num2 - num2"
+    "    return dict(name=f.__name__, description=f.__doc__, parameters=s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,19 +110,19 @@
        "  'type': 'object'}}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sbc_json = jsonschema(abc)\n",
-    "sbc_json"
+    "abc_json = jsonschema(abc)\n",
+    "abc_json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,23 +148,23 @@
     "  model= model_name,\n",
     "  messages=[\n",
     "    {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Tell me a joke\"},\n",
+    "    {\"role\": \"user\", \"content\": \"compute abc between 2 and 3\"},\n",
     "  ],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Sure! Here you go: Why don't scientists trust atoms? Because they make up everything!\""
+       "'To calculate \\\\(abc\\\\) between 2 and 3, we need to know the formula or equation that involves \\\\(a\\\\), \\\\(b\\\\), and \\\\(c\\\\). Could you please provide more details or the specific equation you are referring to?'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,42 +175,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-8"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "abc(1, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "messages= [\n",
-    "    {\"role\": \"user\", \"content\": \"Compute abc between 1 and 5\"}\n",
+    "    {\"role\": \"user\", \"content\": \"Compute abc between 2 and 3\"}\n",
     "]\n",
     "\n",
     "# Pass th function to GPT model\n",
     "response = client.chat.completions.create(\n",
     "    model=model_name,\n",
     "    messages=messages,\n",
-    "    functions=[sbc_json],\n",
+    "    functions=[abc_json],\n",
     "    function_call=\"auto\",\n",
     "    temperature=0\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletion(id='chatcmpl-ABYqUEz1RWgGqFIHp6iVWi7bUua4f', choices=[Choice(finish_reason='function_call', index=0, logprobs=None, message=ChatCompletionMessage(content=None, refusal=None, role='assistant', function_call=FunctionCall(arguments='{\"num1\":2,\"num2\":3}', name='abc'), tool_calls=None))], created=1727318918, model='gpt-3.5-turbo-0125', object='chat.completion', service_tier=None, system_fingerprint=None, usage=CompletionUsage(completion_tokens=20, prompt_tokens=72, total_tokens=92, completion_tokens_details={'reasoning_tokens': 0}))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
    ]
   },
   {
@@ -188,15 +222,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FunctionCall(arguments='{\"num1\":1,\"num2\":5}', name='abc')\n",
-      "{\"num1\":1,\"num2\":5}\n",
+      "FunctionCall(arguments='{\"num1\":2,\"num2\":3}', name='abc')\n",
+      "{\"num1\":2,\"num2\":3}\n",
       "<class 'str'>\n"
      ]
     }
@@ -209,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +251,7 @@
      "output_type": "stream",
      "text": [
       "Function name: abc\n",
-      "Function arguments: {'num1': 1, 'num2': 5}\n",
+      "Function arguments: {'num1': 2, 'num2': 3}\n",
       "<class 'dict'>\n"
      ]
     }
@@ -232,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-8\n"
+      "-2\n"
      ]
     }
    ],
@@ -248,11 +282,105 @@
     "    result = abc(**func_args)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Using Langchain**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "\n",
+    "@tool\n",
+    "def abc(num1:int, num2:int)->int:\n",
+    "    \"Compute abc between two numbers\"\n",
+    "    return 2*(num1) - 2*(num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Compute abc between two numbers'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [abc]\n",
+    "\n",
+    "llm_with_tools = llm.bind_tools(tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = llm_with_tools.invoke(\"Compute abc between 2 and 3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tool_calls': [{'id': 'call_22aQbHVTNYFhgKCb5D9LaV5I',\n",
+       "   'function': {'arguments': '{\"num1\":2,\"num2\":3}', 'name': 'abc'},\n",
+       "   'type': 'function'}],\n",
+       " 'refusal': None}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.additional_kwargs"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "playaround",
+   "display_name": "rag-sqlagent",
    "language": "python",
    "name": "python3"
   },
