update docker chrome, add requirements.txt, add docker to project

--- a/Connect-LangGraph-Agents-to-Your-Own-Databases/Notebooks/RAG_tutorial.ipynb
+++ b/Connect-LangGraph-Agents-to-Your-Own-Databases/Notebooks/RAG_tutorial.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4ca45949",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0a7d87bb",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "7a5295e0",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f9c83c0c",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "7082152c",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,12 @@
    "source": [
     "from IPython.display import Image, display\n",
     "\n",
-    "display(Image(graph.get_graph().draw_mermaid_png()))"
+    "display(Image(graph.get_graph().draw_mermaid_png()))\n",
+    "\n",
+    "img_data = graph.get_graph().draw_mermaid_png()\n",
+    "# Save it to a file (e.g., 'graph.png')\n",
+    "with open(\"rag.png\", \"wb\") as f:\n",
+    "    f.write(img_data)"
    ]
   },
   {
